<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity2layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
    android:textSize="20sp"
    android:baselineAligned="false"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Activity2Name"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textViewName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:text="@string/t_name"
            android:textSize="20sp"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/editFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/textViewName"
            android:hint="@string/et_name_hint"
            android:inputType="textPersonName"
            android:layout_centerVertical="true"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textViewLastName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:text="@string/t_lastname"
            android:textSize="20sp"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/editLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/textViewLastName"
            android:hint="@string/et_lastname_hint"
            android:inputType="textPersonName"
            android:layout_centerVertical="true"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textViewGradesCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:text="@string/t_numberofgrades"
            android:textSize="20sp"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/editGradesCount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/textViewGradesCount"
            android:hint="@string/et_numberofgrades_hint"
            android:inputType="numberDecimal"
            android:layout_centerVertical="true"/>
    </LinearLayout>

    <Button
        android:id="@+id/btnGrades"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_grades_text"
        android:visibility="gone"/>

    <Button
        android:id="@+id/btnBack2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_back_text"/>

</LinearLayout>